--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -36,7 +36,6 @@
                                     <h3 class="well well-sm">{{ category }}</h3>
                                 </div>
                                 <br/>
-
                                 <div class="row well well-sm">
                                     <div class="col-xs-1"></div>
                                     <div class="col-xs-2">Назва</div>
@@ -58,7 +57,7 @@
                                         <div class="col-xs-1">{{ dish.weight }}
                                         </div>
                                         <div class="col-xs-2">
-                                            <input name="count_{{ dish.id }}" type="number" min="0" max="10" value="{{ count }}" style="width: 45px;">
+                                            <input name="count_{{ dish.id }}" type="number" min="0" max="10" value = "1" style="width: 45px;">
                                         </div>
                                         <div class="col-xs-4">{{ dish.description }}</div>
                                         <div class="col-xs-2 text-center">{{ dish.price }}</div>
@@ -78,7 +77,6 @@
                             </div>
                         </div>
                     {% endif %}
-
                     {{ new_order }}
                     <input type="hidden" id="id_user" name="user" value="{{ user.id }}">
                     <input type="submit" class="btn btn-primary" value="Зробити замовлення"/>
